<resources>
    <string name="app_name">Tiểu AA</string>

    <string name="titleMain">Tiểu AA - thông báo</string>
    <string name="noteAplication">
        <u><i><b>MỘT SỐ LƯU Ý NHỎ!</b></i></u>\n\n
        \tĐây là phần mềm mang tên \"<b>Tiểu AA</b>\". Với phần mềm này hổ trợ các bạn học sinh học tốt hơn với các chức năng chính:\n
        \t\t<b>Trò chuyện</b>: Khi ấn vào nút trò chuyện, cô bé Ami sẽ cung cấp cho bạn một số kiến thức cần thiết để thực hiện các chức năng tiếp theo của phần mềm như trả lời câu hỏi trắc nghiệm, tự luận hoặc Ami sẽ trò chuyện và đưa ra những mẹo vặt trong cuộc sống.\n
        \t\t<b>Bài tập</b>: Khi ấn vào nút Bài tập, cô bé Ami hỏi một câu hỏi trắc nghiệm và bạn sẽ trả lời thông qua các phím A, B, C, D phía dưới màn hình\n
        \t\t<b>Thực hành</b>: Chức năng chỉ xảy ra khi Ami và bạn ở \"trường học\" (Ami đến trường khi bạn trả lời 10 câu hỏi trắc nghiệm). Khi ấn vào phím tắt thực hành, Ami sẽ đưa ra một câu hỏi tự luận, bạn sẽ nhập trực tiếp văn bản vào khung văn bản (Vị trí ngay phía dưới câu hỏi) rồi ấn vào phím \"Đồng ý\" để trả lời câu hỏi.\n
        \t\t<b>Lưu ý</b>: Bạn cũng có thể tương tác với với Ami bằng cách chạm vào Ami. Ami có hơn 60 Trang phục khác nhau. Trong suốt quá trình sử dụng phần mềm Ami sẽ điều chỉnh câu hỏi, trang phục, trò chuyện,.. tùy thuộc vào câu trả lời của bạn trong các bài tập.\n\n
        \t<b>Nguồn tài liệu đang được sữ dụng hiện tại: Sinh học lớp 10.\n\n
        \tSản phẩm được phát triển bởi: Lê Minh Vinh\n\n
        \tphần mềm được hổ trợ bởi thầy Phạm Văn Đem và Nguồn tài liệu được lấy từ cô Trần Thị Bé Loan\n\n
        \tHình ảnh trong phần mềm được lấy từ google và một số hình ảnh từ phần mềm làm ảnh hoạt hình Avatar Factory!\n
    \t\t\t\t\tẤn \"đồng ý\" để tiếp tục, ấn \"Không đồng ý\" để thoát!</b></string>
    <string name="ClickYes">Đồng ý</string>
    <string name="ClickNo">Không đồng ý</string>

    <string name="titleActivityInformation">Ami đang muốn biết một ít thông tin về bạn!</string>
    <string name="titleInformartion"><b>Thông tin cá nhân</b></string>
    <string name="noteInformation">
        chú ý:\n\t\t>|-<u>Vui lòng điền đầy đủ thông tin.</u>\n
        \t\t>|-Thông tin <u>có thể chỉnh sửa</u> trong tương lai.</string>
    <string name="name">Tên của bạn:</string>
    <string name="testName">vd: Vinh, Minh Vinh,..</string>
    <string name="job">Bạn là:</string>
    <string name="jobBoy">Nam</string>
    <string name="jobGirl">Nữ</string>
    <string name="ok">Đăng ký</string>
    <string name="restartOk">Đăng ký lại</string>
    <string name="noteInformationError">Vui lòng điền <u><b>đầy đủ</b></u> thông tin</string>
    <string name="noteInformationComplete">Đăng ký thành công!!!\nChúc bạn có một thời gian học tập giải trí vui vẻ cùng Ami</string>
    <string name="errorSignName">
        chú ý:\n\t\t>|-<u>Vui lòng điền đầy đủ thông tin.</u>\n
        \t\t>|-Thông tin <u>có thể chỉnh sửa</u> trong tương lai.\n
        \t\t>|-Tên vui lòng <u>không dùng</u> các kí tự đặc biệt</string>

    <string name="Chat">Trò chuyện</string>
    <string name="Test">Bài tập</string>
    <string name="TestCode">Thực hành</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>

    <string name="deleteData">Xóa toàn bộ dữ liệu</string>
    <string name="deleteDataComplete">Đã xóa toàn bộ dữ liệu</string>
    <string name="deleteDataError">Đã hủy xóa</string>
    <string name="deleteDataCompletess">bạn đã click đồng ý [n] lần</string>
    <string name="noteDeleteData">
        \tBạn thật sự muốn xóa <b>tất cả dữ liệu</b> trong trò chơi ??\n
        \tVui lòng ấn vào \"Đồng ý\" <u>51</u> lần.\n
        \tẤn vào \"Không đồng ý\" để quay trở lại</string>

    <string name="editMenu">Sửa thông tin cá nhân</string>
    <string name="messengerExit">
        Cảm ơn vì đã tin dùng Tiểu AA - phần mềm hổ trợ học tập
    </string>
    <string name="exit">Thoát</string>
</resources>
