<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="0dp"
        android:layout_margin="7dp"
        android:background="@color/backgroundInformation"
        android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/titleInformartion"
        android:textColor="@color/white"
        android:textSize="25sp" />

        <TextView
            android:id="@+id/note_informartion_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="3dp"
            android:text="@string/noteInformation"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="2dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_InformationName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/testName"
                android:textColor="@color/blu"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:padding="2dp"
                android:text="@string/job"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup_BoyAndGirl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_Boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/jobBoy"
                    android:textColor="@color/blu"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton_Girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/jobGirl"
                    android:textColor="@color/blu"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingTop="3dp"-->
            <!--android:paddingBottom="3dp"-->
            <!--android:weightSum="10">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:padding="2dp"-->
                <!--android:text="@string/subjectLearning"-->
                <!--android:textColor="@color/black"-->
                <!--android:textSize="20sp" />-->
            <!--<Button-->
                <!--android:id="@+id/button_subject_learning"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="7"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_marginRight="5dp"-->
                <!--android:text="@string/titleInformartion"-->
                <!--android:textSize="18dp"/>-->
        <!--</LinearLayout>-->

        <Button
            android:id="@+id/button_Sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/ok"
            android:textColor="@color/red"
            android:textSize="22sp" />
    </LinearLayout>
</ScrollView>
