<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <ImageView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:src="@drawable/backgrounddeletedata" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_textview_note"
            android:padding="10dp"
            android:text="@string/noteDeleteData"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/deletaDataYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/ClickYes"
                android:textSize="20sp" />

            <Button
                android:id="@+id/deletaDataNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/ClickNo"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
