<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100"
    android:background="@drawable/backgroundmain"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="20"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="44"
            android:layout_height="0dp"
            android:src="@drawable/logo"
            android:padding="10dp"
            android:scaleType="fitStart"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="57"
            android:layout_height="0dp"
            android:src="@drawable/ami"
            android:paddingTop="20dp"
            android:paddingBottom="0dp"
            android:scaleType="fitEnd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="80"
        android:orientation="vertical"
        android:weightSum="100">

        <!--android:layout_weight="80"-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:layout_weight="87"
            android:background="@drawable/custom_textview_note">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="12dp"
                android:text="@string/noteAplication"
                android:textSize="19sp" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="13"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/ButtonYes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/ClickYes"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ButtonNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/ClickNo"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
