<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayout_BackgroundHomeAndClass"
    android:background="@drawable/athome"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Image View and touch-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="87"
        android:weightSum="100">

        <!--Image View-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitEnd"
                android:src="@drawable/body0" />
            <ImageView
                android:id="@+id/image_clothes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitEnd"
                android:src="@drawable/clothes0"/>
            <ImageView
                android:id="@+id/image_eye"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitEnd"
                android:src="@drawable/eye0"/>
            <ImageView
                android:id="@+id/image_glass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitEnd"
                android:src="@drawable/glass2"/>
            <ImageView
                android:id="@+id/image_eyebrow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitEnd"
                android:src="@drawable/eyebrow0"/>
            <ImageView
                android:id="@+id/image_hair"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitEnd"
                android:src="@drawable/hair0"/>
            <ImageView
                android:id="@+id/image_mouth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitEnd"
                android:src="@drawable/mouth0"/>
            <ImageView
                android:id="@+id/image_feature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:scaleType="fitEnd"
                android:src="@drawable/feature0"/>
            <TextView
                android:id="@+id/textView_HomeAndClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>
            <!--touch-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="78"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:weightSum="100"
                    android:layout_margin="0dp">
                    <Button
                        android:id="@+id/button_Touch_Hair"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="25"
                        android:layout_margin="0dp"
                        android:background="@null"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="20"
                        android:weightSum="100"
                        android:gravity="center"
                        android:layout_margin="0dp">
                        <Button
                            android:id="@+id/button_Touch_Face"
                            android:layout_width="0dp"
                            android:layout_weight="65"
                            android:layout_height="match_parent"
                            android:layout_margin="0dp"
                            android:background="@null"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/button_Touch_Body_Up"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="12"
                        android:background="@null"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="18"
                        android:weightSum="100"
                        android:gravity="center"
                        android:layout_margin="0dp">
                        <Button
                            android:id="@+id/button_Touch_Body"
                            android:layout_width="0dp"
                            android:layout_weight="75"
                            android:layout_height="match_parent"
                            android:layout_margin="0dp"
                            android:background="@null"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <!--Text View chat,...-->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:layout_margin="2dp"
            android:layout_gravity="top">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_AmiChat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:background="@drawable/custom_textview_chat"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <EditText
                        android:id="@+id/editText_Chat_To_Ami"
                        android:visibility="gone"
                        android:padding="7dp"
                        android:hint="Chú ý dấu ngoặc, chấm, chấm phẩy khi viết code."
                        android:textColor="@color/black"
                        android:layout_width="0dp"
                        android:layout_weight="80"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/button_Chat_To_Ami"
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_weight="20"
                        android:text="@string/continueExit"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!--button tương tác-->
    <RelativeLayout
        android:background="@color/background_layoutButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13">
        <LinearLayout
            android:id="@+id/linearLayout_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:textColor="@color/black"
                android:id="@+id/button_chat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Chat" />
            <Button
                android:textColor="@color/black"
                android:id="@+id/button_test"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Test"/>
            <Button
                android:textColor="@color/black"
                android:id="@+id/button_test_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/TestCode"
                android:visibility="gone"/>
        </LinearLayout>

        <!-- đối lập với phía trên -->
        <LinearLayout
            android:id="@+id/linearLayout_class"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="invisible">
            <Button
                android:textColor="@color/black"
                android:id="@+id/button_testA"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/A" />
            <Button
                android:textColor="@color/black"
                android:id="@+id/button_testB"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/B" />
            <Button
                android:textColor="@color/black"
                android:id="@+id/button_testC"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/C" />
            <Button
                android:textColor="@color/black"
                android:id="@+id/button_testD"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/D" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
